# SFMLnetwork

./: .gitignore  Build_run.py  CMakeLists.txt
data/: army_list.json
src/: Cmakelists.txt  main.cpp
src/Sockets/: Cmakelists.txt  socket.cpp  socket.h
src/Utils/: CmakeLists.txt  utils.cpp  utils.h
